fix : added scrollbar style

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -24,3 +24,25 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Scrollbar  */
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: fit-content;
+}
+
+::-webkit-scrollbar-track {
+  background: #ffffff;
+  margin: 10px;
+  border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #b863e9;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #6835f1;
+} 
